# pyproject.toml
[build-system]
build-backend = "setuptools.build_meta"
requires = [
   "setuptools>=70",
   "setuptools_scm[toml]>=8.0",
   'tomli>=1; python_version < "3.11"',
   'typing-extensions; python_version < "3.11"',
]

[project]
name = "pys5p"
description = "Software package to access Sentinel-5p Tropomi data products"
readme = "README.md"
license.file = "LICENSE"
authors = [
  {name = "Richard van Hees", email = "r.m.van.hees@sron.nl"},
  {name = "Paul Tol", email = "P.J.J.Tol@sron.nl"}
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
keywords = [
  "Sentinel-5p",
  "Tropomi",
]
dynamic = [
  "version"
]
dependencies = [
  "h5py>=3.11",
  "moniplot>=1.0",
  "numpy>=1.26",
  "netCDF4>=1.7",
  "xarray>=2023.2",
]

[project.scripts]

[project.urls]
homepage = "https://github.com/rmvanhees/pys5p"
documentation = "https://pys5p.readthedocs.io/en/latest/"
# Source = "https://github.com/rmvanhees/pys5p"
# Changelog = "https://github.com/rmvanhees/pys5p/HISTORY.rst"
"Issue tracker" = "https://github.com/rmvanhees/pys5p/issues"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

[tool.ruff]
line-length = 88
target-version = "py311"
# exclude = ["pilots"]

[tool.ruff.lint]
select = [
  "F",   # pyflakes
  "D",   # pydocstyle
  "E",   # pycodestyle
  "W",   # pycodestyle
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  # "ANN", # flake8-annotations
  "B",   # flake8-bugbear
  "Q",   # flake8-quotes
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports
  "TCH", # flake8-type-checking
  "NPY", # NumPy-specific rules
]
ignore = ["D203", "D213"]

[lint.pydocstyle]
convention = "pep257"
