# pyproject.toml
[build-system]
requires = [
   "hatchling",
   "versioningit",
]
build-backend = "hatchling.build"

[project]
name = "pys5p"
description = "Software package to access Sentinel-5p Tropomi data products"
readme = "README.md"
license.file = "LICENSE"
authors = [
  {name = "Richard van Hees", email = "r.m.van.hees@sron.nl"},
  {name = "Paul Tol", email = "P.J.J.Tol@sron.nl"}
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
keywords = [
  "Sentinel-5p",
  "Tropomi",
]
dynamic = [
  "version"
]
dependencies = [
  "h5py>=3.11",
  "moniplot>=1.0",
  "numpy>=1.26",
  "netCDF4>=1.7",
  "xarray>=2023.2",
]

[project.scripts]

[project.urls]
homepage = "https://github.com/rmvanhees/pys5p"
documentation = "https://pys5p.readthedocs.io/en/latest/"
# Source = "https://github.com/rmvanhees/pys5p"
# Changelog = "https://github.com/rmvanhees/pys5p/HISTORY.rst"
"Issue tracker" = "https://github.com/rmvanhees/pys5p/issues"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
# Example formatted version: 1.2.4.dev42+ge174a1f

dirty = "{base_version}+d{build_date:%Y%m%d}"
# Example formatted version: 1.2.3+d20230922

distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"
# Example formatted version: 1.2.4.dev42+ge174a1f.d20230922

[tool.ruff]
line-length = 88
target-version = "py312"
# exclude = ["pilots"]

[tool.ruff.lint]
select = [
  "D",    # pydocstyle
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "W",    # pycodestyle
  "ANN",  # flake8-annotations
  "B",    # flake8-bugbear
  "ISC",  # flake8-implicit-str-concat
  "PGH",  # flake8-pie
  "Q",    # flake8-quotes
  "SIM",  # flake8-simplify
  "TID",  # flake8-tidy-imports
  "TCH",  # flake8-type-checking
  "NPY",  # NumPy-specific
  "PERF", # Perflint
  "RUF",  # Ruff Specific
  "UP",   # pyupgrade
]
ignore = ["D203", "D213", "ISC001"]

[lint.pydocstyle]
convention = "pep257"
