[metadata]
name = pys5p
description = Software package to access S5p Tropomi data products
license = BSD 3-Clause License
license_files = LICENSE
long_description = file:README.md
url = https://github.com/rmvanhees/pys5p.git
author = Richard van Hees
author_email = r.m.van.hees@sron.nl
maintainer = Richard van Hees
maintainer_email = r.m.van.hees@sron.nl
classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
zip_safe = False
package_dir =
   =src
packages = find:
install_requires =
    numpy>=1.19
    scipy>=1.6
    xarray>=0.16
    h5py>=3.4
    matplotlib>=3.3
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
toml = toml